# zynaddsubfx-classic

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/DSP/: SVFilter.cpp  Unison.cpp
src/Effects/: CMakeLists.txt  DynamicFilter.cpp
src/MXml/: CMakeLists.txt
src/Misc/: Bank.cpp  CMakeLists.txt  Config.cpp  Master.cpp  Util.cpp  Util.h
src/Nio/: AudioOut.cpp  CMakeLists.txt  EngineMgr.cpp  InMgr.cpp  RtEngine.cpp  RtEngine.h
src/Output/: DSSIaudiooutput.h
src/Params/: CMakeLists.txt  Controller.cpp
src/Synth/: CMakeLists.txt
src/UI/: CMakeLists.txt
tests/: AdNoteTest.h
